--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -26,40 +26,42 @@
     </section>
 
     <section id="details">
-      <div>
-        <h3>Contact</h3>
-        <p>
+     <div>
+       <div>
+         <h3>Contact</h3>
+         <p>
           <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           +1 710 555 1234<br>
           @fakeRealty
-        </p>
-      </div>
+         </p>
+       </div>
       
-      <div>
+       <div>
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
           P.O. Box 5555<br>
           Brooklyn, NY 11201
-        </p>
-      </div>
+         </p>
+       </div>
 
-      <div>
+        <div>
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
           <a href="#" target="_blank">Affordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
-      </div>
+       </div>
 
-      <div>
+       <div>
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
+       </div>
       </div>
     </section>
   </body>
